[package]
name = "anvil-tera"
version = "0.1.1"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil wrapper for the tera templating library"
license="MIT"
readme="../README.md"
repository="https://github.com/anvil-rs/anvil"

[dependencies]
anvil = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = { version = "1.20.0" } 

# For -Zminimal-versions
[target.'cfg(any())'.dependencies]
slug = { version = "0.1.1", optional = true }
pest = { version = "2.7.0", optional = true }

[dev-dependencies]
tempfile = "3.15.0"
